[package]
name = "tenet-api-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.16", features = ["chrono", "time"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
poem = "1.3.48"
async-graphql-poem = "4.0.16"
dotenv = "0.15.0"
sea-orm = { version = "0.10.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
sqlx-mysql = "0.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
chrono = "0.4.23"
serde = "1.0.150"
openssl-sys = "0.9.79"
futures = "0.3.25"
syn = "1.0.106"
quote = "1.0.22"

graphql = { path = "./graphql" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }

entities = { path = "./entities" }
migration = { path = "./migration" }
ulid = "1.0.0"


[workspace]

members = [
  "entities",
  "graphql",
  "repository",
  "migration",
]
