[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.10.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }