[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.16", features = ["chrono", "time"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
entities = { path = "../entities" }